--- a/index.html
+++ b/index.html
@@ -67,11 +67,30 @@
             <table class="styled-table">
                 <thead class="top-container">
                     <tr  id="tp">
-                        <th class="con">Config</th>
-                        <th class="con">total</th>
-                        <th class="st1">Status by percentage</th>
-                        <th class="st1">Status by numbers</th>
-                        <th><div>Pass</div></th>
+                        <th>
+                            <div class="container1">
+                                <div> CONFIG</div>
+                                <div> Total</div>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="container2">
+                                <div class="sbp" >Status By Percentage</div>
+                                <div class="sbn" >Status By Numbers</div>
+                            </div>
+                        </th>
+                        <th> <div class="container3">
+                            <div class="pass">Pass</div>       
+                            <div class="fail">fail</div>       
+                            <div class="inp">In progress</div> 
+                            <div class="block">blocked</div>   
+                            <div class="pass1">Pass</div>      
+                            <div class="fail1">Fail</div>      
+                            <div class="inp1">In progress</div>
+                            <div class="block1">Blocked</div>  
+                        </div></th>
+                        
+                        
 
                     </tr>
                 </thead>
